(executable
 (libraries ppxlib gospel why3 conf cameleer pp_loc)
 (name plugin_cameleer)
 (modes plugin)
 (embed_in_plugin_libraries compiler-libs.common ocaml-compiler-libs.shadow
   ppxlib.astlib ppxlib.stdppx ppxlib.ast ppxlib fmt pp_loc gospel cameleer conf))

(install
 (section lib_root)
 (files
  (plugin_cameleer.cmxs as why3/plugins/plugin_cameleer.cmxs))
 (package cameleer))
